Added community service page

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,9 +65,12 @@
                       </ul>
                     </li>
 
+										<li><a href="/communityservice">Community Service</a></li>
+
                     <li><a href="/calendar">Calendar</a></li>
 
                     <li><a target="_blank" href="https://drive.google.com/folderview?id=0B0IWe9P8bzviN183MTJ0Zi15REk&usp=sharing">Pictures</a></li>
+
                 </ul>
             </div>
         </div>
