--- a/templates/officers.html
+++ b/templates/officers.html
@@ -129,7 +129,7 @@
 	<div class="row">
 		<div class="col-md-8">
 			<h2><b>Garrett Backer</b></h2>
-			<h4>Community Service Directors</h4>
+			<h4>Community Service Director</h4>
 			<p>Community service is a vital aspect of being a member of the National Honor Society, considering service is one of the four pillars of NHS. This position is one that is relatively new to the NHS Board, but is one that is extremely important. This position requires making sure every member meets their community service requirements for NHS and BCA. It also requires the proper documentation and management of the hours that each member completes through NHS sanctioned events on the NHS database. In addition, a wide variety of internal and external community service opportunities must be organized, so there is something that appeals to all members. This is the primary responsibility of this position and is one that must be attended to in a timely manner so that opportunities are available to members throughout the year. While this position may require a time commitment outside of school, it is one that is extremely rewarding and helps to foster a fundamental part of being an NHS member.</p>
 		</div>
 
