Updated grammar and links

--- a/templates/communityservice.html
+++ b/templates/communityservice.html
@@ -12,9 +12,9 @@
 
 	<div class="row">
 		<div class="col-md-12">
-			<h4><b>Steps to Propose a NHS Community Service Event:</b></h4>
+			<h4><b>Steps to Propose an NHS Community Service Event:</b></h4>
 			<ol>
-        <li>Ensure your club has more than 10 members and can accurately track hours</li>
+        <li>Ensure that there are at least 10 members participating in your event, and that there is a way to track attendance for the event</li>
 				<li>Fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSeYq54a0oGUVXWnVzwuk9vm0zd7Pto58iNRr8haN3YA1qJT0w/viewform" target="_blank">NHS Community Service Proposals Form</a></li>
         <li>Done! - your proposal will be considered by the board, you will get a response in 1-2 weeks</li>
 			</ol>
@@ -23,7 +23,7 @@
 
   <div class="row">
 		<div class="col-md-12">
-			<h4><b>Steps to Propose a NHS Community Service Event:</b></h4>
+			<h4><b>Steps to Propose an NHS Community Service Event:</b></h4>
 			<ol>
         <li>If required, sign up for the event</li>
 				<li>Participate in the event for at least 4 hours total, make sure to <b>sign in</b></li>
