Added tutor info

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,7 @@
                         <li><a href="/my-sessions">View My Sessions</a></li>
                         <li><a href="https://drive.google.com/file/d/0B-b_N1cpnpZ7WHAwcy1zd3ZaUmc/view?usp=sharing">Signoff Sheet</a></li>
                         <li><a href="/points">Points</a></li>
+												<li><a href="/tutorinfo">Information</a></li>
                         {% else %}
                         <li><a href="/view">View Sessions</a></li>
                         <li class="divider"></li>
@@ -61,6 +62,7 @@
                         <li><a href="/signin">Sign In</a></li>
                         <li><a href="/signoff-sheet">Signoff Sheet</a></li>
                         <li><a href="/points">Points</a></li>
+												<li><a href="/tutorinfo">Information</a></li>
                         {% endif %}
                       </ul>
                     </li>
