--- a/templates/points.html
+++ b/templates/points.html
@@ -19,7 +19,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<hr>
-			<iframe style="width:100%; height:100%;" src="https://docs.google.com/spreadsheets/d/15bVozH0vrxpl1C6Z-RNGqxDeC0uJxTZkEYbNiZHqhDc/pubhtml?widget=true&amp;headers=false"></iframe>
+			<iframe style="width:100%; height:100%;" src="https://docs.google.com/spreadsheets/d/15bVozH0vrxpl1C6Z-RNGqxDeC0uJxTZkEYbNiZHqhDc/edit?usp=sharing"></iframe>
 			<hr>
 		</div>
 	</div>
