Fixed routing and content bugs

--- a/templates/tutorinfo.html
+++ b/templates/tutorinfo.html
@@ -26,7 +26,7 @@
 
   <div class="row">
 		<div class="col-md-12">
-			<h4><b>Steps to Propose an NHS Community Service Event:</b></h4>
+			<h4><b>Signing Up to Tutor:</b></h4>
 			<ol>
         <li>Go to the <i>Tutoring</i> tab, and press <i>Sign Up</i>, the username must match your bergen mail username</li>
 				<li>Once you’ve signed up, go to the <i>Tutoring</i> tab, and press <i>Add a Session</i></li>
