Updated tutoring organization

--- a/templates/tutorinfo.html
+++ b/templates/tutorinfo.html
@@ -5,7 +5,31 @@
 
 	<div class="row">
 		<div class="col-md-12">
-			<h2>NHS Member Information</h2>
+			<h2>NHS Tutoring</h2>
+			<hr>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-12">
+			<h3>General Information</h3>
+			<hr>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-12">
+			<h4><b>Requesting a Tutor:</b></h4>
+			<ol>
+				<li>Go to the <i>Tutoring</i> tab, press <i>View Sessions</i>, look for an available tutor, and contact them!</li>
+				<li>If you are having trouble finding a tutor when you’re free, contact <a href="mailto:mikina@bergen.org">your officer</a> (tell us what subject and when you’re free and we'll set you up right away)</li>
+			</ol>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-12">
+			<h3>NHS Members</h3>
 			<hr>
 		</div>
 	</div>
@@ -39,17 +63,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h4><b>Logging Tutoring Hours:</b></h4>
-			<p>The tutee must fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLScAVHZU74_u4q2u_KZ_wN9gXh46JOGKRm4Ks_BJbx5LzhcoLA/viewform" target="_blank">"form</a> so NHS can verify your hours. Tutoring hours will not be counted without a completed form. Each NHS member is responsible for making sure that he/she submits a form.</p>
-		</div>
-	</div>
-
-	<div class="row">
-		<div class="col-md-12">
-			<h4><b>Requesting a Tutor:</b></h4>
-			<ol>
-				<li>Go to the <i>Tutoring</i> tab, press <i>View Sessions</i>, look for an available tutor, and contact them!</li>
-				<li>If you are having trouble finding a tutor when you’re free, contact <a href="mailto:mikina@bergen.org">your officer</a> (tell us what subject and when you’re free and we'll set you up right away)</li>
-			</ol>
+			<p>The tutee must fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLScAVHZU74_u4q2u_KZ_wN9gXh46JOGKRm4Ks_BJbx5LzhcoLA/viewform" target="_blank">form</a> so NHS can verify your hours. Tutoring hours will not be counted without a completed form. Each NHS member is responsible for making sure that he/she submits a form.</p>
 		</div>
 	</div>
 
