Updated for 2016 induction

--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
 
                     <li><a href="/calendar">Calendar</a></li>
 
-                    <li><a target="_blank" href="https://drive.google.com/folderview?id=0B0IWe9P8bzviN183MTJ0Zi15REk&usp=sharing">Pictures</a></li>
+                    <li><a target="_blank" href="https://drive.google.com/drive/folders/0B-b_N1cpnpZ7ckh5bXh4WFIzVWc?usp=sharing">Pictures</a></li>
 
                 </ul>
             </div>
