--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
         <div class="item">
             <div class="fill" style="background-image:url('/static/img/slideshow/3.JPG');"></div>
             <div class="carousel-caption">
-                <h1><a href="https://drive.google.com/folderview?id=0B-b_N1cpnpZ7STdCWGhMMkVLQk0&usp=sharing">PICTURES</a></h1><h2>Check out the 2016 NHS Induction pictures!</h2>
+                <h1><a href="https://drive.google.com/drive/folders/0B-b_N1cpnpZ7ckh5bXh4WFIzVWc?usp=sharing">PICTURES</a></h1><h2>Check out the 2016 NHS Induction pictures!</h2>
             </div>
         </div>
     </div>
@@ -39,5 +39,5 @@
 </header>
 
 <!-- Script to Activate the Carousel | Set the interval to change the duration of each slide -->
-<script>$('.carousel').carousel({interval: 4500})</script> 
+<script>$('.carousel').carousel({interval: 4500})</script>
 {% endblock %}
