Made writing more clear

--- a/templates/requirements.html
+++ b/templates/requirements.html
@@ -37,7 +37,7 @@
 
 	<div class="row">
 		<div class="col-md-12">
-			<h4><b>Members: NHS Members in good standing must meet the following requiremetns at the end of senior year:</b></h4>
+			<h4><b>Members: NHS Members in good standing must meet the following requirements at the end of senior year:</b></h4>
 			<ul>
 				<li>A cumulative GPA of at least 3.750.</li>
 				<li>At least 50 hours of community service.</li>
