--- a/templates/tutorinfo.html
+++ b/templates/tutorinfo.html
@@ -44,7 +44,7 @@
 				<li>Tri (1st half): 2 hours by <b>5/5</b></li>
 				<li>Tri 3 (2nd half): 2 hours by <b>6/9</b></li>
 			</ul>
-			<p>Current seniors must complete their leftover hours from last year by <b>3/17</b>. If you’re not sure how many additional hours you have to complete, contact <a href="mailto:mikina@bergen.org">your officer</a>.</p>
+			<p>2015-2016 NHS members must complete their leftover hours from last year by <b>3/17</b>. If you’re not sure how many additional hours you have to complete, contact <a href="mailto:mikina@bergen.org">your officer</a>.</p>
 		</div>
 	</div>
 
